Fixed line breaks in profile

--- a/main.css
+++ b/main.css
@@ -23,6 +23,16 @@ h4{
 	text-align: left;
 	float:left;
 }
+
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+} 
 /*div{
 	text-align: center;
 }*/
